--- a/colorgame.css
+++ b/colorgame.css
@@ -1,6 +1,6 @@
 body {
     background-color: #232323 !important;
-    color: white;
+    color: white !important;
     margin: 0;
     font-family: "Montserrat", "Avenir";
     text-transform: uppercase;
@@ -13,35 +13,48 @@ h1 {
     line-height: 1.1;
     padding: 20px 0;
 }
-#colorDisplay {
+#colorToGuess {
     font-size: 200%;
 }
 #stripe {
     background: white;
     color: black;
-    height: 30px;
+    height: 40px;
     text-align: center;
+    font-size: 16px;
 }
-button {
+.btn-group {
+    height: 100%;
+}
+button, button:focus, .btn{
     border: none;
+    border-radius:0;
     background: none;
+    padding: 0 6px;
     text-transform: uppercase;
     height: 100%;
     font-weight: 700;
     color: steelblue;
-    letter-spacing: 1px;
+    letter-spacing: 0.7px;
     font-size: inherit;
-    transition: all 0.3s;
-    outline: none;
+    transition: all 0.3s/;
+    outline: none !important;
 }
-button:hover, .selected  {
-    color: white;
+button:hover, .selected, .dropdown-menu>li>a:hover  {
+    color: white !important;
     background: steelblue;
+}
+.btn {
+    min-width: 155px;
+}
+.dropdown-menu>li>a {
+    color: steelblue;
 }
 #message {
     display: inline-block;
-    width: 20%;
+    width: 10%;
 }
+
 #container {
     margin: 40px auto;
     max-width: 600px;
