Change square/circle references to better names
Both square and circle were both used to reference the possible guesses.  This
is confusing and not very explicit.

--- a/colorgame.css
+++ b/colorgame.css
@@ -59,7 +59,7 @@ button:hover, .selected, .dropdown-menu>li>a:hover  {
     margin: 40px auto;
     max-width: 600px;
 }
-.square {
+.colorGuess {
     width: 180px;
     margin: 10px;
     padding-bottom: 180px;
