--- a/colorgame.css
+++ b/colorgame.css
@@ -37,7 +37,7 @@ button, button:focus, .btn{
     color: steelblue !important;
     letter-spacing: 0.7px;
     font-size: inherit;
-    transition: all 0.3s/;
+    transition: all 0.3s;
     outline: none !important;
 }
 button:hover, .selected, .dropdown-menu>li>a:hover  {
@@ -69,4 +69,34 @@ button:hover, .selected, .dropdown-menu>li>a:hover  {
     -webkit-transition: background 0.6s;
     -moz-transition: background 0.6s;
     border-radius: 50%;
+}
+.dropbtn {
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown {
+    height: 100%;
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.dropdown-content a {
+    color: steelblue;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: steelblue;
+    color: white;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
 }
