--- a/colorgame.css
+++ b/colorgame.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 body {
     background-color: #232323 !important;
     color: white !important;
