--- a/colorgame.css
+++ b/colorgame.css
@@ -80,6 +80,7 @@ button:hover {
     float: left;
     background: #232323;
     transition: background 0.6s;
+    -o-transition: background 0.6s;
     -webkit-transition: background 0.6s;
     -moz-transition: background 0.6s;
     border-radius: 50%;
