Add instructions on how to play the game
Some users were confused as to what to do.  Added the instructions to an
information icon in the title.  When the icon is hovered over, a short message
appears with instructions on how to play the game.

--- a/colorgame.css
+++ b/colorgame.css
@@ -127,3 +127,19 @@ button:hover {
 .header a {
     color: steelblue;
 }
+h1 .fa-info-circle {
+    font-size: 0.6em;
+    vertical-align: middle;
+}
+.fa-info-circle .dropdown-content {
+    background-color: white;
+    z-index: 2;
+    padding: 20px;
+    border-radius: 10%;
+    min-width: 200px;
+}
+.fa-info-circle p {
+    font-family: "Montserrat", "Avenir";
+    text-transform: none;
+    color: steelblue;
+}
